# SW403-RAG-System

./: .dockerignore  .env.example  .gitignore  Dockerfile  EVALUATION_GUIDE.md  README.md  basic_test_ingest.ps1  build.ps1  deploy.sh  docker-compose.yaml  pyproject.toml
P1/: Dockerfile  main.py  pyproject.toml
P1/src/: api.py  chunking.py  chunking_p1.py  models.py  p1_utils.py  vector_store.py
P2/: Dockerfile  __init__.py  main.py
P2/src/: api.py  chunking.py  models.py  vector_store.py
P3/: Dockerfile  __init__.py  main.py  pyproject.toml
P3/src/: api.py  chunking.py  embedding_langchain.py  rag.py
evaluation/: __init__.py  analyzer.py  metrics.py  runner.py  visualize.py
shared_data/: ground_truth.json
