[project]
name = "sw403"
version = "0.1.0"
description = "SW 403 RAG System "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "qdrant-client>=1.16.1",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sentence-transformers>=2.2.2",
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "starlette>=0.27.0",
    "click>=8.3.1",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "rouge-score>=0.1.2",
    "pytest>=7.4.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tabulate>=0.9.0",
    "scipy>=1.11.0",
    "requests>=2.31.0",
]
