[project]
name = "sw403"
version = "0.1.0"
description = "SW 403 RAG System "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "qdrant-client>=1.16.1",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sentence-transformers>=2.2.2",
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "starlette>=0.27.0",
    "click>=8.3.1",
    "langchain[openai]>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "langchain-community>=0.4.1",
    "bs4>=0.0.2",
    "langchain-openai>=1.1.0",
    "langchain-qdrant>=1.1.0",
]
